fix energuide link

--- a/en/planning-guide/measuring-achievements/index.html
+++ b/en/planning-guide/measuring-achievements/index.html
@@ -78,7 +78,7 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
@@ -130,7 +130,11 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p> <a href="../../../en/case-studies/detail/7">The Environment Network</a> pilot tested its starter kits with 150 participants.</p> <p>When <a href="../../../en/case-studies/detail/10">Go Boulder</a> first introduced its Guaranteed Ride Home, it pilot-tested it with a small number of companies. No limits were set on its use so that any possible abuses would become apparent. Similarly, its student transit pass was first introduced at the University of Colorado on a one-year trial basis.</p><p> <a href="../../../en/case-studies/detail/36">The Roach Coach Project</a> approach was first piloted in Toronto, then promoted to others for their use.</p> <p> <em>Resource Alert for Canadians:</em> <br/>	Canadas <a href="../../../en/case-studies/detail/115">EnerGuide for Houses</a> Program was first piloted with a few organizations such as <a href="../../../en/case-studies/detail/114">Green$aver</a>, before being offered more widely across the country.</p> </div>
+<p> <a href="../../../en/case-studies/detail/7">The Environment Network</a> pilot tested its starter kits with 150 participants.
+</p> <p>When <a href="../../../en/case-studies/detail/10">Go Boulder</a> first introduced its Guaranteed Ride Home, it pilot-tested it with a small number of companies. No limits were set on its use so that any possible abuses would become apparent. Similarly, its student transit pass was first introduced at the University of Colorado on a one-year trial basis.</p><p> <a href="../../../en/case-studies/detail/36">The Roach Coach Project</a> approach was first piloted in Toronto, then promoted to others for their use.
+</p> <p> <em>Resource Alert for Canadians:</em> <br/>
+	Canadas <a href="../../../en/case-studies/detail/638/#energuide">EnerGuide for Houses</a> Program was first piloted with a few organizations such as <a href="../../../en/case-studies/detail/114">Green$aver</a>, before being offered more widely across the country.
+</p> </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
@@ -154,7 +158,13 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p>	In <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> pilot, results were collected by the coordinator and marked on a display at the end of each month.</p> <p>	On an ongoing basis, <a href="../../../en/case-studies/detail/15">JEEP</a> monitored energy outputs at the local power plant and estimated energy savings using information from home visit reports.</p> <p> <a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a> continuously tracked curbside lift counts, the weight of waste going to landfill, and the weight of Blue Box materials.</p> <p> <em>Resource Alert for Canadians:</em> <br/> <a href="../../../en/case-studies/detail/115">EnerGuide for Houses</a> facilitates the ongoing measurement of energy-efficiency improvements resulting from the Program. Its blower door test provides accurate before and after data on the decreases in air leakage achieved for each house. Even if there is no second (i.e. after) home visit, the programs software can use the collected data to make sound estimates of the likely energy savings from each recommended action taken.</p> </div>
+<p>
+	In <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> pilot, results were collected by the coordinator and marked on a display at the end of each month.
+</p> <p>
+	On an ongoing basis, <a href="../../../en/case-studies/detail/15">JEEP</a> monitored energy outputs at the local power plant and estimated energy savings using information from home visit reports.
+</p> <p> <a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a> continuously tracked curbside lift counts, the weight of waste going to landfill, and the weight of Blue Box materials.
+</p> <p> <em>Resource Alert for Canadians:</em> <br/> <a href="../../../en/case-studies/detail/638/#energuide">EnerGuide for Houses</a> facilitates the ongoing measurement of energy-efficiency improvements resulting from the Program. Its blower door test provides accurate before and after data on the decreases in air leakage achieved for each house. Even if there is no second (i.e. after) home visit, the programs software can use the collected data to make sound estimates of the likely energy savings from each recommended action taken.
+</p> </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
@@ -174,7 +184,11 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p>	When employees arrived at work on the day of <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a>, they marked the activity they undertook on a chart. Pollution Probe collected the charts and tabulated accumulated points. A telephone survey was conducted at the end of the Clean Air Commute pilot to collect information on clean commuting practices undertaken by members of each of the groups during the three-month period. Respondents were also asked about their intentions for repeating these practices the following summer.</p> <p> <a href="../../../en/case-studies/detail/7">The Environment Network</a> used a telephone survey at the end of its pilot to measure purchasing intentions regarding pesticides, synthetic chemical fertilizers, and toxic cleaning products.</p> <p><a href="../../../en/case-studies/detail/10">Go Boulder</a> conducted a Biennial Diary Study, for which 1,000 residents kept a log of their travels for a randomly assigned day in the second week of September. Six years of data on the progress of the program had been accumulated by 1995. Similar studies were undertaken with employees, who were asked to record their travel habits for a full week.</p><p> <a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a> conducted periodic studies on waste composition and the use of backyard composters.</p> </div>
+<p>
+	When employees arrived at work on the day of <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a>, they marked the activity they undertook on a chart. Pollution Probe collected the charts and tabulated accumulated points. A telephone survey was conducted at the end of the Clean Air Commute pilot to collect information on clean commuting practices undertaken by members of each of the groups during the three-month period. Respondents were also asked about their intentions for repeating these practices the following summer.
+</p> <p> <a href="../../../en/case-studies/detail/7">The Environment Network</a> used a telephone survey at the end of its pilot to measure purchasing intentions regarding pesticides, synthetic chemical fertilizers, and toxic cleaning products.
+</p> <p><a href="../../../en/case-studies/detail/10">Go Boulder</a> conducted a Biennial Diary Study, for which 1,000 residents kept a log of their travels for a randomly assigned day in the second week of September. Six years of data on the progress of the program had been accumulated by 1995. Similar studies were undertaken with employees, who were asked to record their travel habits for a full week.</p><p> <a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a> conducted periodic studies on waste composition and the use of backyard composters.
+</p> </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
@@ -194,7 +208,12 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p>	Of the seven companies which agreed to participate in <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> pilot, three were randomly assigned to serve as a control group.</p> <p> <a href="../../../en/case-studies/detail/7">The Environment Network</a> randomly selected one hundred households that had already received a Green Home Tune-Up; 50 received a sustainable landscaping kit, 50 received a household hazardous waste kit. A third group of 50 residents who had participated in the Green Home Tune-Up program were randomly selected as a control group, and received neither kit.</p> <p>	In one <a href="../../../en/case-studies/detail/37">Montreal Dietary Dispensary</a> study, two children born to the same mother were compared, the first untreated and the second (born after the first) treated with the Higgins Method. In another study, the pregnancy outcomes of treated adolescents were compared to those of women who were untreated but were the same age and gave birth in the same year at the same hospital as the treated group.</p> <p>The <a href="../../../en/case-studies/detail/622/">AIDS Peer Education Program</a> used a control group of 74 students attending another high school in another city. The comparison group received the same questionnaire with no intervention. For ethical reasons, the peer educators later visited these students and provided the presentation.</p>
+<p>
+	Of the seven companies which agreed to participate in <a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> pilot, three were randomly assigned to serve as a control group.
+</p> <p> <a href="../../../en/case-studies/detail/7">The Environment Network</a> randomly selected one hundred households that had already received a Green Home Tune-Up; 50 received a sustainable landscaping kit, 50 received a household hazardous waste kit. A third group of 50 residents who had participated in the Green Home Tune-Up program were randomly selected as a control group, and received neither kit.
+</p> <p>
+	In one <a href="../../../en/case-studies/detail/37">Montreal Dietary Dispensary</a> study, two children born to the same mother were compared, the first untreated and the second (born after the first) treated with the Higgins Method. In another study, the pregnancy outcomes of treated adolescents were compared to those of women who were untreated but were the same age and gave birth in the same year at the same hospital as the treated group.
+</p> <p>The <a href="../../../en/case-studies/detail/622/">AIDS Peer Education Program</a> used a control group of 74 students attending another high school in another city. The comparison group received the same questionnaire with no intervention. For ethical reasons, the peer educators later visited these students and provided the presentation.</p>
 <p class="tip_example"><strong>Tip:</strong> Plan how you will select your control group before you engage participants, or you may find it difficult to find the control group you need.</p>
 </div>
 <!--/plan_col_left-->
