--- a/en/tools-of-change/feedback/index.html
+++ b/en/tools-of-change/feedback/index.html
@@ -164,7 +164,7 @@ theForm.elements[i].checked = status;
 <p><a href="../../../en/case-studies/detail/15">JEEP</a>, BC21 PowerSmart and the Green Community programs (see <a href="../../../en/case-studies/detail/20">ReCAP</a>, <a href="../../../en/case-studies/detail/12">Guelph 2000</a>, <a href="../../../en/case-studies/detail/7">The Environment Network</a> and <a href="../../../en/case-studies/detail/18">Peterborough GreenUp</a>) provided the installation of energy and water conservation devices, to ensure that the devices would actually be installed, and installed properly.</p><p>
 	Information on what each group member had done between meetings was sent by <a href="../../../en/case-studies/detail/9">GAP</a>'s EcoTeams to a central and community database. There it was converted into resulting savings for each individual and fed back to the group at the end of the program.
 </p> <p> <em>Resource Alert for Canadians:</em> <br/>
-	The <a href="../../../en/case-studies/detail/115">EnerGuide for Houses</a> Program provides a second home visit, including blower door test, that confirms the benefits of actions taken and ensures that they were completed correctly.
+	The <a href="../../../en/case-studies/detail/638/#energuide">EnerGuide for Houses</a> Program provides a second home visit, including blower door test, that confirms the benefits of actions taken and ensures that they were completed correctly.
 </p> <p><a href="../../../en/case-studies/detail/155">Sustainable Alberta</a> provided feedback on its website, and through prizes awarded directly to participants. Some participating individuals also received prizes from their employers. A party at the close of the event also allowed individuals to celebrate their participation in the event.</p>
 <p class="tip_example"><strong>Tip:</strong> Click on an image to enlarge it. Click your back button to return to this page.<br/>
 <a href="/images/documentimages/jeep/jeep-1.jpg"><img alt="JEEP image" border="0" height="92" src="/images/documentimages/jeep/jeep-1.jpg" width="149"/></a><br/>
@@ -253,7 +253,7 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td>second home visit</td>
-<td valign="top" width="50%"><a href="../../../en/case-studies/detail/115">EnerGuide for Houses</a>, <a href="../../../en/case-studies/detail/114">Green$aver</a></td>
+<td valign="top" width="50%"><a href="../../../en/case-studies/detail/638/#energuide">EnerGuide for Houses</a>, <a href="../../../en/case-studies/detail/114">Green$aver</a></td>
 </tr>
 </tbody>
 </table>
