--- a/en/tools-of-change/home-visits/index.html
+++ b/en/tools-of-change/home-visits/index.html
@@ -78,7 +78,7 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
@@ -137,7 +137,9 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p><a href="../../../en/case-studies/detail/20">ReCAP</a>'s Home Advisors received the standard 10-day training course that the Ontario Government provided to each new Green Community. They devoted 1 1/2 days to learning and practising social marketing skills.</p><p>	The <a href="../../../en/case-studies/detail/37">Montreal Dietary Dispensary</a>s counselors received intensive training followed by months of supervision.</p>
+<p><a href="../../../en/case-studies/detail/20">ReCAP</a>'s Home Advisors received the standard 10-day training course that the Ontario Government provided to each new Green Community. They devoted 1 1/2 days to learning and practising social marketing skills.</p><p>
+	The <a href="../../../en/case-studies/detail/37">Montreal Dietary Dispensary</a>s counselors received intensive training followed by months of supervision.
+</p>
 <p class="tip_example"><strong>Tip:</strong> Training materials are available from the Green Communities Association (see the ReCAP case study).</p>
 </div>
 <!--/plan_col_left-->
@@ -155,7 +157,8 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p><a href="../../../en/case-studies/detail/2">Be Water Wise</a> found it relatively straightforward to visit homes without advance notice and provide information. However, when they tried to sell water conservation kits through these visits they found that few homes were willing to buy - even though the kits were offered at a significant discount. Furthermore, residents who were asked to make a purchase were less likely to sign an agreement to participate in the program even though the agreement did not require making the purchase.</p><p><a href="../../../en/case-studies/detail/6">Earth-Works</a>, The <a href="../../../en/case-studies/detail/22">Toxic Challenge</a> and <a href="../../../en/case-studies/detail/24">We're Toxic Free</a> all approached people at their homes without any advance notice. Quizzes and incentives were used to interest them in spending further time.</p><p> <a href="../../../en/case-studies/detail/7">The Environment Network</a> pilot tested its starter kits with 150 participants.</p> <p>When <a href="../../../en/case-studies/detail/12">Guelph 2000</a> introduced its free shade tree program, 35 percent of its home visits were booked by people who called specifically for that incentive. Another 10 percent of the visits were a result of telemarketing efforts and 30 percent came from word-of-mouth promotion.</p>
+<p><a href="../../../en/case-studies/detail/2">Be Water Wise</a> found it relatively straightforward to visit homes without advance notice and provide information. However, when they tried to sell water conservation kits through these visits they found that few homes were willing to buy - even though the kits were offered at a significant discount. Furthermore, residents who were asked to make a purchase were less likely to sign an agreement to participate in the program even though the agreement did not require making the purchase.</p><p><a href="../../../en/case-studies/detail/6">Earth-Works</a>, The <a href="../../../en/case-studies/detail/22">Toxic Challenge</a> and <a href="../../../en/case-studies/detail/24">We're Toxic Free</a> all approached people at their homes without any advance notice. Quizzes and incentives were used to interest them in spending further time.</p><p> <a href="../../../en/case-studies/detail/7">The Environment Network</a> pilot tested its starter kits with 150 participants.
+</p> <p>When <a href="../../../en/case-studies/detail/12">Guelph 2000</a> introduced its free shade tree program, 35 percent of its home visits were booked by people who called specifically for that incentive. Another 10 percent of the visits were a result of telemarketing efforts and 30 percent came from word-of-mouth promotion.</p>
 <p class="tip_example"><strong>Tip:</strong> If you are going to ask people to spend a significant amount of time or money, have them request the visits.</p>
 <p class="tip_example"><strong>Tip:</strong> See <a href="#table1">Table 1 </a>below.</p>
 </div>
@@ -200,7 +203,8 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p><a href="../../../en/case-studies/detail/20">ReCAP</a>'s Home Advisors installed a number of conservation devices free of charge -overcoming a number of potential barriers including lack of time, confidence, knowledge and money. Furthermore, when they encountered residents who were concerned about the up-front costs of a recommendation, they offered EnviroLoans at lower than average interest rates.</p><p>During the home visit, the <a href="../../../en/case-studies/detail/37">Montreal Dietary Dispensary</a>'s counselors assessed each clients living conditions (e.g. food stocks, cooking facilities) and used this information to tailor a dietary intervention. To minimize resistance to making changes to ingrained eating habits, diets were designed to introduce as few changes as possible.</p><p> <a href="../../../en/case-studies/detail/156">Water Efficient Durham</a> gave homeowners rain gauges, reminder tags and educational literature.</p> <p><a href="../../../en/case-studies/detail/658">Smart Trips Welcome</a> delivered orders by bicycle so new residents could speak with a transportation expert face-to-face. A phone call to all participants was made approximately two weeks after delivery of the materials, giving participants the chance to ask questions and for program staff to provide support and encouragement.</p>
+<p><a href="../../../en/case-studies/detail/20">ReCAP</a>'s Home Advisors installed a number of conservation devices free of charge -overcoming a number of potential barriers including lack of time, confidence, knowledge and money. Furthermore, when they encountered residents who were concerned about the up-front costs of a recommendation, they offered EnviroLoans at lower than average interest rates.</p><p>During the home visit, the <a href="../../../en/case-studies/detail/37">Montreal Dietary Dispensary</a>'s counselors assessed each clients living conditions (e.g. food stocks, cooking facilities) and used this information to tailor a dietary intervention. To minimize resistance to making changes to ingrained eating habits, diets were designed to introduce as few changes as possible.</p><p> <a href="../../../en/case-studies/detail/156">Water Efficient Durham</a> gave homeowners rain gauges, reminder tags and educational literature.
+</p> <p><a href="../../../en/case-studies/detail/658">Smart Trips Welcome</a> delivered orders by bicycle so new residents could speak with a transportation expert face-to-face. A phone call to all participants was made approximately two weeks after delivery of the materials, giving participants the chance to ask questions and for program staff to provide support and encouragement.</p>
 <p class="tip_example"><strong>Tip:</strong> Click on an image to enlarge it. Click your back button to return to this page.<br/>
 <a href="/images/documentimages/bc21/bc21-1.jpg"><img alt="BC21 image" border="0" height="92" src="/images/documentimages/bc21/bc21-1.jpg" width="149"/></a><br/>
     A staff person installs weather-stripping in the Okanagan First Nations Community Project (BC21 PowerSmart).</p>
@@ -401,7 +405,7 @@ theForm.elements[i].checked = status;
 <tr>
 <td valign="top" width="33%">3 hours, staff</td>
 <td valign="top" width="33%">energy and water efficiency</td>
-<td valign="top" width="33%"><a href="../../../en/case-studies/detail/115">EnerGuide for Houses</a></td>
+<td valign="top" width="33%"><a href="../../../en/case-studies/detail/638/#energuide">EnerGuide for Houses</a></td>
 </tr>
 <tr>
 <td valign="top">Students</td>
