--- a/en/tools-of-change/overcoming-specific-barriers/index.html
+++ b/en/tools-of-change/overcoming-specific-barriers/index.html
@@ -287,7 +287,7 @@ theForm.elements[i].checked = status;
 <h1>Examples</h1>
 <p> <em>Resource Alert for Canada and the U.S.A.:</em> Sales-person incentives can encourage these key influencers to help consumers consider more energy-efficient appliances. Canadas <a href="../../../en/case-studies/detail/91">EnerGuide for Household Appliances</a> Program, and the US <em>Energy Star</em> Program can help you identify eligible (more energy efficient) appliances. To be effective, this normally needs to be complemented by a program to promote consumer interest and demand.
 </p> <p> <em>Resource Alert for Canadians:</em> <br/>
-	The <a href="../../../en/case-studies/detail/115">EnerGuide for Houses</a> Program provides face-to-face opportunities to inform, demonstrate and provide personal assistance as required.
+	The <a href="../../../en/case-studies/detail/638/#energuide">EnerGuide for Houses</a> Program provides face-to-face opportunities to inform, demonstrate and provide personal assistance as required.
 </p> <p>
 	The <a href="../../../en/case-studies/detail/51">Better Buildings Partnership</a> provided participants with a list of pre-qualified Energy Service Companies (ESCOs), to support them in planning and carrying out their energy-efficiency renovations, and to address concerns that some had about working with ESCOs.
 </p> <p> <a href="../../../en/case-studies/detail/97">Greenest City</a>s Walking and Cycling School Buses enabled parents to provide children with personal assistance and supervision.
