--- a/en/tools-of-change/financial-incentives-and-disincentives/index.html
+++ b/en/tools-of-change/financial-incentives-and-disincentives/index.html
@@ -78,7 +78,7 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
@@ -133,7 +133,11 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p> <a href="../../../en/case-studies/detail/15">JEEP</a> wanted people to purchase and install energy saving devices. For some devices, like power saver cords for car block heaters, this was a "once only" purchase; for other devices, like compact fluorescent light bulbs, the aim was to induce trial and continued purchase. Research had revealed that, in the short term, residents were unlikely to make the purchases without some sort of incentive.</p> <p><a href="../../../en/case-studies/detail/114">Green$aver's</a> <a href="../../../en/case-studies/detail/115">EnerGuide</a> audits were detailed and focused enough that customers could see their value and were willing to pay for them. However, GreenSaver's market surveys found that homeowners would not pay more than $150 for the assessments. The actual cost of providing each assessment was at least $300. Half the cost of the assessments was subsidized by Natural Resources Canadas sponsorship and half was paid by customers.</p><p> <a href="../../../en/case-studies/detail/101">The City of Portland</a> found that although the combined power of all tools was most effective, the single most effective was implementing direct financial incentives. People were much more willing to scrap their lawn mowers if they knew they would receive a $50 coupon for an electric mower or push mower.</p> <p>	The <a href="../../../en/case-studies/detail/51">Better Buildings Partnership</a> developed self-sustaining financial incentives. Interest free loans and/or loan repayment insurance were offered to finance building retrofits leading to guaranteed utility savings. A portion of the savings went back to the participants, and a portion went to the Partnership to finance future loans and programs.</p> </div>
+<p> <a href="../../../en/case-studies/detail/15">JEEP</a> wanted people to purchase and install energy saving devices. For some devices, like power saver cords for car block heaters, this was a "once only" purchase; for other devices, like compact fluorescent light bulbs, the aim was to induce trial and continued purchase. Research had revealed that, in the short term, residents were unlikely to make the purchases without some sort of incentive.
+</p> <p><a href="../../../en/case-studies/detail/114">Green$aver's</a> <a href="../../../en/case-studies/detail/638/#energuide">EnerGuide</a> audits were detailed and focused enough that customers could see their value and were willing to pay for them. However, GreenSaver's market surveys found that homeowners would not pay more than $150 for the assessments. The actual cost of providing each assessment was at least $300. Half the cost of the assessments was subsidized by Natural Resources Canadas sponsorship and half was paid by customers.</p><p> <a href="../../../en/case-studies/detail/101">The City of Portland</a> found that although the combined power of all tools was most effective, the single most effective was implementing direct financial incentives. People were much more willing to scrap their lawn mowers if they knew they would receive a $50 coupon for an electric mower or push mower.
+</p> <p>
+	The <a href="../../../en/case-studies/detail/51">Better Buildings Partnership</a> developed self-sustaining financial incentives. Interest free loans and/or loan repayment insurance were offered to finance building retrofits leading to guaranteed utility savings. A portion of the savings went back to the participants, and a portion went to the Partnership to finance future loans and programs.
+</p> </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
@@ -151,7 +155,12 @@ theForm.elements[i].checked = status;
 <div class="plan_col_left">
 <h1>Examples</h1>
 <p><a href="../../../en/case-studies/detail/5">The Clean Air Commute</a> held a draw for over 100 prizes related to resource-efficient commuting, such as bikes and accessories, transit passes and in-line skates.</p>
-<p> <a href="../../../en/case-studies/detail/15">JEEP</a> subsidized up to 80 percent of the cost of targeted products and renovations.</p> <p>	Sidney Township (<a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a>) charged $1.50 for every extra bag of garbage collected.</p> <p>	To minimize attrition, <a href="../../../en/case-studies/detail/36">The Roach Coach Project</a> gave $25 to those completing its program.</p>
+<p> <a href="../../../en/case-studies/detail/15">JEEP</a> subsidized up to 80 percent of the cost of targeted products and renovations.
+</p> <p>
+	Sidney Township (<a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a>) charged $1.50 for every extra bag of garbage collected.
+</p> <p>
+	To minimize attrition, <a href="../../../en/case-studies/detail/36">The Roach Coach Project</a> gave $25 to those completing its program.
+</p>
 <p class="tip_example"><strong>Tip:</strong> When people are already sufficiently motivated to engage in an activity, the use of financial incentives will likely undermine their internal motivation. Furthermore, should the incentives be removed at some later time it is possible that the intrinsic motivation will not return.</p>
 <p class="tip_example"><strong>Tip:</strong> If a financial incentive is not required, focus on the Tools <a href="../../../en/tools-of-change/norm-appeals">Norm Appeals</a>, <a href="../../../en/tools-of-change/building-motivation-over-time">Building Motivation Over Time</a> and <a href="../../../en/tools-of-change/obtaining-a-commitment">Obtaining a Commitment</a>.</p>
 </div>
@@ -170,7 +179,11 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p> <a href="../../../en/case-studies/detail/15">JEEP</a> went door to door to communicate the incentives to residents.</p> <p>	Sidney Township (<a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a>) provided residents with 52 "free" bag tags, which caught their attention. Only tagged bags were collected.</p> <p><em>Resource Alert for Canada and the U.S.A.:</em> Considering offering sales-persons incentives, to encourage them to remind buyers of the benefits of energy-efficient appliances? Canada's <a href="../../../en/case-studies/detail/91">EnerGuide for Household Appliances</a> Program, and the US <em>Energy Star</em> Program can help you identify eligible (more energy efficient) appliances.</p><p> <a href="../../../en/case-studies/detail/101">The City of Portland</a> advertised and promoted its lawnmower buyback program through "stuffers", which were advertisements included in Portland General Electric's bills to residents. In addition, it used television public service announcements to promote the program, as well as posters in local stores, print advertisements, weekend promotions at the home renovation store Home Depot and local neighborhood events.</p> </div>
+<p> <a href="../../../en/case-studies/detail/15">JEEP</a> went door to door to communicate the incentives to residents.
+</p> <p>
+	Sidney Township (<a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a>) provided residents with 52 "free" bag tags, which caught their attention. Only tagged bags were collected.
+</p> <p><em>Resource Alert for Canada and the U.S.A.:</em> Considering offering sales-persons incentives, to encourage them to remind buyers of the benefits of energy-efficient appliances? Canada's <a href="../../../en/case-studies/detail/91">EnerGuide for Household Appliances</a> Program, and the US <em>Energy Star</em> Program can help you identify eligible (more energy efficient) appliances.</p><p> <a href="../../../en/case-studies/detail/101">The City of Portland</a> advertised and promoted its lawnmower buyback program through "stuffers", which were advertisements included in Portland General Electric's bills to residents. In addition, it used television public service announcements to promote the program, as well as posters in local stores, print advertisements, weekend promotions at the home renovation store Home Depot and local neighborhood events.
+</p> </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
@@ -186,7 +199,12 @@ theForm.elements[i].checked = status;
 <div class="left_content_2col">
 <div class="plan_col_left">
 <h1>Examples</h1>
-<p><a href="../../../en/case-studies/detail/15">JEEP</a> had to place a limit of eight reduced-price, compact fluorescent bulbs per home and five per apartment after the first two days of the program. It had become apparent that people were buying large quantities as gifts for people outside of Jasper. A limit of two indoor and two outdoor lighting timers per residence was also set.</p><p>	Sidney Township (<a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a>) provided residents with 52 "free" bag tags, which caught their attention. Only tagged bags were collected.</p> <p> <em>Resource Alert for Canada and the U.S.A.:</em> Considering offering consumer and/or sales-person incentive program? Canadas <a href="../../../en/case-studies/detail/91">EnerGuide for Household Appliances</a> Program, and the US <em>Energy Star</em> Program can help you identify eligible (more energy efficient) appliances.</p> <p>	A program that promoted <a href="../../../en/case-studies/detail/140">compact fluorescent lights</a> through manufacturers rebates, required the manufacturers to commit to selling 30% of their inventory allocated for rebate within three weeks, 60% in eight weeks and 100% in twelve weeks. If a manufacturer failed to meet the deadlines or performance criteria, its rebates were reassigned to other manufacturers.</p> </div>
+<p><a href="../../../en/case-studies/detail/15">JEEP</a> had to place a limit of eight reduced-price, compact fluorescent bulbs per home and five per apartment after the first two days of the program. It had become apparent that people were buying large quantities as gifts for people outside of Jasper. A limit of two indoor and two outdoor lighting timers per residence was also set.</p><p>
+	Sidney Township (<a href="../../../en/case-studies/detail/19">Quinte Regional Recycling</a>) provided residents with 52 "free" bag tags, which caught their attention. Only tagged bags were collected.
+</p> <p> <em>Resource Alert for Canada and the U.S.A.:</em> Considering offering consumer and/or sales-person incentive program? Canadas <a href="../../../en/case-studies/detail/91">EnerGuide for Household Appliances</a> Program, and the US <em>Energy Star</em> Program can help you identify eligible (more energy efficient) appliances.
+</p> <p>
+	A program that promoted <a href="../../../en/case-studies/detail/140">compact fluorescent lights</a> through manufacturers rebates, required the manufacturers to commit to selling 30% of their inventory allocated for rebate within three weeks, 60% in eight weeks and 100% in twelve weeks. If a manufacturer failed to meet the deadlines or performance criteria, its rebates were reassigned to other manufacturers.
+</p> </div>
 <!--/plan_col_left-->
 <div class="plan_col_right">
 <h1>Your Program</h1>
