fix broken topic resource URL links

--- a/en/topic-resources/detail/246/index.html
+++ b/en/topic-resources/detail/246/index.html
@@ -78,7 +78,7 @@ theForm.elements[i].checked = status;
 <div id="header">
 <h1 id="logo" style="	background:transparent url(../../../../public/images/logo_en.gif) no-repeat 0 0;">
 <a href="../../../../en/home/" title="Tools of Change - Home">Tools- of Change</a>s
-					
+
 					</h1>
 <div id="qnav">
 <ul id="quicknav">
@@ -100,7 +100,7 @@ theForm.elements[i].checked = status;
  <div class="left_wrap">
 <div class="left_content">
 <!-- modified 8-20-2007 Brian Loomis  <p><a href="topic_resources.htm">Topic Resources</a> &raquo; <a href="clean_air.htm">Clean Air</a> &raquo; <a href="topic_list.htm">Iowa City</a></p>
-  
+
  -->
 <table class="topics">
 <tr>
@@ -109,7 +109,7 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="http://https://link.springer.com/article/10.1007%2Fs11116-019-10054-2" target="_new">https://link.springer.com/article/10.1007%2Fs11116-019-10054-2</a></td>
+<td class="rt_text_box"><a href="https://link.springer.com/article/10.1007%2Fs11116-019-10054-2" target="_new">https://link.springer.com/article/10.1007%2Fs11116-019-10054-2</a></td>
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
