--- a/en/topic-resources/detail/436/index.html
+++ b/en/topic-resources/detail/436/index.html
@@ -117,9 +117,9 @@ theForm.elements[i].checked = status;
 </tr>
 <tr>
 <td class="highlight_box">Highlights:</td>
-<td class="rt_text_box"><ul>
-<li>This Viewpoint presents a retrospective of text messaging in health, drawing on the example of text message–based interventions for smoking cessation, and presents evidence for the continued relevance of this mobile health modality in 2025 and beyond.  </li>
-</ul></td>
+<td class="rt_text_box">
+This Viewpoint presents a retrospective of text messaging in health, drawing on the example of text message–based interventions for smoking cessation, and presents evidence for the continued relevance of this mobile health modality in 2025 and beyond.  </li>
+</td>
 </tr>
 <tr>
 <td class="highlight_box">Topics:</td>
