Fixing Fitness Page, adding two new Topic Resources
Fixing Fitness Page, adding two new Topic Resources

--- a/en/topic-resources/active-living/index.html
+++ b/en/topic-resources/active-living/index.html
@@ -194,6 +194,10 @@ Systematic reviews and/or meta-analyses (based largely on epidemiological studie
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Active Living Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/438">Mobile Health Interventions Reduce Sitting Time in Older Adults</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>This meta-analysis of three randomized controlled trials found a significant decrease in sedentary behavior with mHealth interventions compared with conventional or no interventions (95% confidence interval.)</p> <strong><a href="../../../en/topic-resources/detail/438">Read More »</a></strong>
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/437">Implement Interventions through Sporting Organisations</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>Compared with control interventions, interventions conducted by or in partnership with sporting organisations increased the amount of physical activity per day by approximately 7.4 minutes of moderate-to-vigorous physical activity (95% confidence interval.)</p> <strong><a href="../../../en/topic-resources/detail/437">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/417">The Use of Social Marketing in Community-Wide Physical Activity Programs: A Scoping Review</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 <p>This review highlights examples of successful interventions and opportunities for refining community-wide interventions using social marketing strategies.</p> <strong><a href="../../../en/topic-resources/detail/417">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/335">Cool Walkability Planning </a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/><img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
