--- a/en/topic-resources/detail/437/index.html
+++ b/en/topic-resources/detail/437/index.html
@@ -105,29 +105,29 @@ theForm.elements[i].checked = status;
 <table class="topics">
 <tr>
 <td class="highlight_box">Title:</td>
-<td class="rt_text_box"><h2 data-pagefind-meta="title">Don’t Forget the Humble Text Message</h2></td>
+<td class="rt_text_box"><h2 data-pagefind-meta="title">Implement Interventions Through Sporting Organisations</h2></td>
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="https://www.jmir.org/2024/1/e59888" target="_new">https://www.jmir.org/2024/1/e59888</a></td>
+<td class="rt_text_box"><a href="https://www.healthevidence.org/view-article.aspx?a=interventions-implemented-sporting-organisations-promoting-healthy-behaviour-50045" target="_new">https://www.healthevidence.org/view-article.aspx?a=interventions-implemented-sporting-organisations-promoting-healthy-behaviour-50045</a></td>
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
-<td class="rt_text_box"><p>Text messaging is a proven intervention for changing tobacco behaviors, due to its low cost, vast reach, frequent use, high read rates, and ability to be tailored and personalized.</p></td>
+<td class="rt_text_box"><p>Compared with control interventions, interventions conducted by or in partnership with sporting organisations increased the amount of physical activity per day by approximately 7.4 minutes of moderate-to-vigorous physical activity (95% confidence interval.)</p></td>
 </tr>
 <tr>
 <td class="highlight_box">Highlights:</td>
 <td class="rt_text_box">
-This Viewpoint presents a retrospective of text messaging in health, drawing on the example of text message–based interventions for smoking cessation, and presents evidence for the continued relevance of this mobile health modality in 2025 and beyond.  </li>
+Sporting organisations are highly prevalent and engage many people in many countries to be more active. Compared with control interventions they increased the uptake of fruit and vegetables, and the amount of physical activity per day.  </li>
 </td>
 </tr>
 <tr>
 <td class="highlight_box">Topics:</td>
-<td class="rt_text_box">Health, Tobacco</td>
+<td class="rt_text_box">Health, Active Living, Fitness, Nutrition</td>
 </tr>
 <tr>
 <td class="highlight_box">Location:</td>
-<td class="rt_text_box">New Zealand</td>
+<td class="rt_text_box">Australia, US</td>
 </tr>
 <tr>
 <td class="highlight_box">Resource Type:</td>
@@ -135,7 +135,7 @@ This Viewpoint presents a retrospective of text messaging in health, drawing on 
 </tr>
 <tr>
 <td class="highlight_box">Publisher:</td>
-<td class="rt_text_box">JMIR</td>
+<td class="rt_text_box">The Cochrane Database of Systematic Reviews</td>
 </tr>
 <tr>
 <td class="highlight_box">Date Last Updated:</td>
