--- a/en/topic-resources/detail/438/index.html
+++ b/en/topic-resources/detail/438/index.html
@@ -105,29 +105,25 @@ theForm.elements[i].checked = status;
 <table class="topics">
 <tr>
 <td class="highlight_box">Title:</td>
-<td class="rt_text_box"><h2 data-pagefind-meta="title">Don’t Forget the Humble Text Message</h2></td>
+<td class="rt_text_box"><h2 data-pagefind-meta="title">Mobile Health Interventions Reduce Sitting Time in Older Adults</h2></td>
 </tr>
 <tr>
 <td class="highlight_box">URL:</td>
-<td class="rt_text_box"><a href="https://www.jmir.org/2024/1/e59888" target="_new">https://www.jmir.org/2024/1/e59888</a></td>
+<td class="rt_text_box"><a href="https://www.healthevidence.org/view-article.aspx?a=effectiveness-mobile-health-interventions-reducing-sitting-time-older-adults-50979" target="_new">https://www.healthevidence.org/view-article.aspx?a=effectiveness-mobile-health-interventions-reducing-sitting-time-older-adults-50979</a></td>
 </tr>
 <tr>
 <td class="highlight_box">Summary:</td>
-<td class="rt_text_box"><p>Text messaging is a proven intervention for changing tobacco behaviors, due to its low cost, vast reach, frequent use, high read rates, and ability to be tailored and personalized.</p></td>
+<td class="rt_text_box"><p>Mobile Health Interventions Reduce Sitting Time in Older Adults</p></td>
 </tr>
 <tr>
 <td class="highlight_box">Highlights:</td>
 <td class="rt_text_box">
-This Viewpoint presents a retrospective of text messaging in health, drawing on the example of text message–based interventions for smoking cessation, and presents evidence for the continued relevance of this mobile health modality in 2025 and beyond.  </li>
+Mobile health (mHealth) provides health information through electronic devices, even at home. This meta-analysis of three randomized controlled trials found a significant decrease in sedentary behavior with mHealth interventions compared with conventional or no interventions (95% confidence interval.)  </li>
 </td>
 </tr>
 <tr>
 <td class="highlight_box">Topics:</td>
-<td class="rt_text_box">Health, Tobacco</td>
-</tr>
-<tr>
-<td class="highlight_box">Location:</td>
-<td class="rt_text_box">New Zealand</td>
+<td class="rt_text_box">Health, Active Living, Fitness</td>
 </tr>
 <tr>
 <td class="highlight_box">Resource Type:</td>
@@ -135,7 +131,7 @@ This Viewpoint presents a retrospective of text messaging in health, drawing on 
 </tr>
 <tr>
 <td class="highlight_box">Publisher:</td>
-<td class="rt_text_box">JMIR</td>
+<td class="rt_text_box">healthevidence.org</td>
 </tr>
 <tr>
 <td class="highlight_box">Date Last Updated:</td>
