--- a/en/topic-resources/nutrition/index.html
+++ b/en/topic-resources/nutrition/index.html
@@ -146,6 +146,8 @@ This past year, we've added one nutrition-related case study - Cool Block. You
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Nutrition Resources</h1>
 
+<h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/437">Engage Sporting Organisations in Implementation</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
+<p>Compared with control interventions, interventions conducted by or in partnership with sporting organisations increased the amount of fruit and vegetables eaten.</p> <strong><a href="../../../en/topic-resources/detail/437">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/420">Effectiveness of Nudge Interventions to Promote Fruit and Vegetables' Selection, Purchase, or Consumption: A Systematic Review</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 <p>This study assessed the effectiveness of nudge interventions aiming to increase the selection, purchase, or consumption of fruit and vegetables (F&amp;V) in real-life settings. It found that nudging interventions are effective in promoting the selection, purchase, and consumption of F&amp;V in real-life settings.</p> <strong><a href="../../../en/topic-resources/detail/420">Read More »</a></strong>
 <h2 class="sub_header_2col"><a href="../../../en/topic-resources/detail/419">Alcohol Calorie Labelling Would Impact Drinking Attitudes and Behaviour in England, Says National Survey</a>  <img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
