Fixing Fitness Page - second round
Fixing Fitness Page - second round

--- a/en/topic-resources/fitness/index.html
+++ b/en/topic-resources/fitness/index.html
@@ -104,8 +104,6 @@ theForm.elements[i].checked = status;
 <div class="one_col_tan_wrap">
 <div class="one_column_left">
 <h3>Latest News</h3>
-<h3><strong>We apologize but THIS PAGE IS NOT WORKING PROPERLY and we are having trouble fixing it. In the meantime.... please refer to the <a href="../../../en/topic-resources/active-living/">Active Living</a> Topic Resources page, which shares many of the same entries.</strong> </h3>
-<br/>
 <h6>Virtually Everyone Benefits From More Physical Activity</h6>
 Systematic reviews and/or meta-analyses (based largely on epidemiological studies consisting of large cohorts) have demonstrated a dose-response relationship between physical activity and premature mortality and the primary and secondary prevention of several chronic medical conditions. The relationships between physical activity and health outcomes are generally curvilinear such that marked health benefits are observed with relatively minor volumes of physical activity.  <a href="https://healthevidence.org/view-article.aspx?a=health-benefits-physical-activity-systematic-review-current-systematic-reviews-32750&amp;utm_source=New+at+Health+Evidence%E2%84%A2%3A+November+2017&amp;utm_campaign=1302bff514-EN+EMAIL_CAMPAIGN_2017_11_13&amp;utm_medium=email&amp;utm_term=0_7452659d88-1302bff514-198528393" target="_blank">More </a></div>
 <!--/two_column_left-->
@@ -127,7 +125,7 @@ Systematic reviews and/or meta-analyses (based largely on epidemiological studie
 <a href="../../../en/case-studies/detail/754">Smart Trips Austin</a>  <img alt="Environment" height="15" src="../../../public/images/small_leaf_icon.gif" width="13"/><img alt="Health" height="15" src="../../../public/images/small_apple_icon.gif" width="13"/></h2>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="" frameborder="0" height="150" src="https://www.youtube.com/embed/7ZSNV-qpYAw" title="Smart Trips 2020 Citywide Program" width="97%"></iframe></p>
 <p><em>Smart Trips Austin </em>encourages residents of Austin Texas, USA to take multi-modal transportation options (walk, bike, ride transit, and share rides) more often, rather than drive alone. The program focuses on personal interactions — educating individuals on their options and overcoming barriers to multi-modal travel. <em>Smart Trips </em>reinforces this new information using community-based programs such as learn-to-ride classes, transit instruction, and group walking activities. Initially, the program targeted residential neighbourhoods of Austin Texas; each year a different area was targeted. In 2020 the program expanded to city-wide and began to segment using a Stages of Change approach.  In 2021, it started targeting residents who had recently moved to or around Austin. <em>Smart Trips Austin</em> averaged a participation rate of 5-10% of households contacted, a 5-10% reduction in drive-alone trips among participants (about 41,000 vehicle trips per year), and a corresponding 5-10% increase in active and shared trips. This account of the program was designated a <em>Landmark</em> case study in 2023, making the City of Austin one of the few governments with more than one program designation. </p> <strong><a href="../../../en/case-studies/detail/754">Read More »</a></strong>
-
+</div>
 <div class="ms_col_right">
 <h1 class="header_2col">Most Recent Fitness Resources</h1>
 
